--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,8 +12,8 @@
         98:[250,250]:[20]\n
         0:[250,250]\n
         1:[250,250]\n
-        2:[1222,585]\n
-        3:[1423,583]\n
+        2:none:drag(385,1000,385,500)\n
+        3:none:drag(385,500,385,1000)\n
         4:[250,250]\n
         5:[250,250]\n
         6:[250,250]\n
@@ -24,8 +24,8 @@
         11:[250,250]\n
         12:[250,250]:[20]\n
         13:[250,250]:[20]\n
-        14:[204,620]:[20]\n
-        15:[350,620]:[20]\n
+        14:none:drag(385,1000,200,1000)\n
+        15:none:drag(385,1000,585,1000)\n
         16:[250,250]
     </string>
     <string name="lorem_ipsum">
