--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,25 +7,25 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
-    <string name="gamepad_config">
+    <string name="subway_surfers">
         99:[250,250]:[20]\n
         98:[250,250]:[20]\n
         0:[250,250]\n
         1:[250,250]\n
-        2:none:drag(385,1000,385,500)\n
-        3:none:drag(385,500,385,1000)\n
+        2:drag(385,1000,385,800):none\n
+        3:drag(385,800,385,1000):none\n
         4:[250,250]\n
         5:[250,250]\n
         6:[250,250]\n
         7:[250,250]\n
         8:[250,250]\n
-        9:[250,250]\n
+        9:none:tap(525,1515)\n
         10:[250,250]\n
         11:[250,250]\n
         12:[250,250]:[20]\n
         13:[250,250]:[20]\n
-        14:none:drag(385,1000,200,1000)\n
-        15:none:drag(385,1000,585,1000)\n
+        14:drag(385,1000,200,1000):none\n
+        15:drag(385,1000,585,1000):none\n
         16:[250,250]
     </string>
     <string name="lorem_ipsum">
