--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,16 +31,16 @@
     <string name="epsxe_thps4">
         99:down(260,515):none:none\n
         98:[250,250]:[20]\n
-        0:[250,250]\n
-        1:[250,250]\n
-        2:drag(385,1000,385,800):none\n
-        3:drag(385,800,385,1000):none\n
-        4:[250,250]\n
-        5:[250,250]\n
-        6:[250,250]\n
-        7:[250,250]\n
-        8:[250,250]\n
-        9:[250,250]\n
+        0:down(1365,630):up(1365,630)\n
+        1:down(1470,495):up(1470,495)\n
+        2:down(1295,495):up(1295,495)\n
+        3:down(1365,365):up(1365,365)\n
+        4:down(125,60):up(125,60)\n
+        5:down(1535,60):up(1535,60)\n
+        6:down(235,60):up(235,60)\n
+        7:down(1425,60):up(1425,60)\n
+        8:down(675,655):up(675,655)\n
+        9:down(805,655):up(805,655)\n
         10:[250,250]\n
         11:[250,250]\n
         12:down(275,440):up(275,440)\n
