--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
         16:[250,250]
     </string>
     <string name="epsxe_thps4">
-        99:down(260,515):none:none\n
+        99:down(260,515):up(260,515):analog(260,515,{0},{1},150)\n
         98:[250,250]:[20]\n
         0:down(5,1365,630):up(5,1365,630)\n
         1:down(4,1470,495):up(4,1470,495)\n
@@ -48,6 +48,10 @@
         14:down(0,195,525):up(0,195,525)\n
         15:down(0,355,525):up(0,355,525)\n
         16:[250,250]
+    </string>
+    <string name="blank_profile">
+        99:down(0,360,800):up(0,360,800):analog(0,360,800,{0},{1},150)\n
+        98:down(0,360,800):up(0,360,800):analog(0,360,800,{0},{1},150)
     </string>
     <string name="lorem_ipsum">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
