--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,7 +53,7 @@
         99:down(0,360,800):up(0,360,800):analog(0,360,800,{0},{1},150)\n
         98:down(0,360,800):up(0,360,800):analog(0,360,800,{0},{1},150)\n
         3:open:su#input keyevent KEYCODE_POWER;\n
-        1:open:down(0,355,1355);move(0,355,300);up(0,355,1000);\n
+        1:open:su#input swipe 355 1300 355 300\n
         2:open:down(0,140,920);move(0,565,920);move(0,355,1135);move(0,355,1355);up(0,355,1355);
     </string>
     <string name="lorem_ipsum">
