--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,25 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
+    <string name="blank_profile">
+        99:down(0,360,800):up(0,360,800):analog(0,360,800,{0},{1},150)\n
+        98:down(1,360,800):up(1,360,800):analog(1,360,800,{0},{1},200)\n
+        3:open:su#input keyevent KEYCODE_POWER;\n
+        1:open:su#input swipe 355 1300 355 300\n
+        2:open:down(0,140,920);move(0,565,920);move(0,355,1135);move(0,355,1355);up(0,355,1355);
+    </string>
+    <string name="gta_vicecity">
+        99:down(0,225,560):up(0,225,560):analog(0,225,560,{0},{1},100)\n
+        98:down(1,1125,360):up(4,1125,360):analog(1,1125,360,{0},{1},200)\n
+        14:down(0,205,620):up(0,205,620)\n
+        15:down(0,355,620):up(0,355,620)\n
+        2:down(2,1510,415):up(1,1510,415)\n
+        3:down(5,1515,290):up(2,1515,290)\n
+        4:down(3,1510,185):up(3,1510,185)\n
+        5:down(3,1510,185):up(3,1510,185)\n
+        6:down(4,1345,555):up(1,1345,555)\n
+        7:down(4,1510,555):up(1,1510,555)
+    </string>
     <string name="subway_surfers">
         99:[250,250]:[20]\n
         98:[250,250]:[20]\n
@@ -48,13 +67,6 @@
         14:down(0,195,525):up(0,195,525)\n
         15:down(0,355,525):up(0,355,525)\n
         16:[250,250]
-    </string>
-    <string name="blank_profile">
-        99:down(0,360,800):up(0,360,800):analog(0,360,800,{0},{1},150)\n
-        98:down(0,360,800):up(0,360,800):analog(0,360,800,{0},{1},150)\n
-        3:open:su#input keyevent KEYCODE_POWER;\n
-        1:open:su#input swipe 355 1300 355 300\n
-        2:open:down(0,140,920);move(0,565,920);move(0,355,1135);move(0,355,1355);up(0,355,1355);
     </string>
     <string name="lorem_ipsum">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
