--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,8 @@
         3:open:su#input keyevent KEYCODE_POWER;\n
         1:open:su#input swipe 355 1300 355 300\n
         2:open:down(0,140,920);move(0,565,920);move(0,355,1135);move(0,355,1355);up(0,355,1355);\n
-        9:open:circle(0,360,800,300,60,5,true,20);
+        8:open:circle(0,360,800,300,60,3,close,left,5);\n
+        9:open:circle(0,360,800,300,60,3,open,right,5);
     </string>
     <string name="gta_vicecity">
         99:down(0,225,560):up(0,225,560):analog(0,225,560,{0},{1},100)\n
